2005-08=12  Jim Huang  <jserv@kaffe.org>

	* src/Makefile.am: Fixlet to newly-added src/docklet/api.h .

2005-08-11  Jim Huang  <jserv@kaffe.org>

	* src/Makefile.am,
	src/Makefile-byhand: Remove Makefile-byhand since pcmanx_pure_gtk2
	is getting more and more complex.
	
	* src/docklet/api.h: New file. API to docklet supported functions.

	* src/mainframe.h,
	src/mainframe.cpp,
	src/pcmanx_pure_gtk2.cpp (main):
	Use docklet/api.h instead of eggtrayicon header.

2005-08-11  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/msg_data.cpp,
	src/nancy_bot/nancy_bot.cpp:
	Copy DATAPATH/pcmanx/nancy_bot/{default.conf,default_msg.data} to
	CONFIG_PATH when use "default" as but name. ( when default.conf and
	default_msg.data don't exist in ~/.pcmanx/ ).

	* src/view/telnetcon.cpp: Set PATH to $HOME/.pcmanx.

	* po/zh_TW.po: Added my Chinese name (zh_TW).

2005-08-11  Chia I Wu  <b90201047@ntu.edu.tw>

	* src/core/termdata.cpp,
	src/core/termdata.h
	(CTermView::ExtendSelection): Extend selection continuously so that
	characters having the same class as the cell specified does are
	selected.
	(CTermView::OnLButtonDown): Extend selection on double-click.
	Select whole line on triple-click.

	* src/core/termdata.cpp,
	src/core/termdata.h
	(CTermData::GetCharClass): New function to determine the class of a
	character. It's quite naive now.

2005-08-07  Jim Huang  <jserv@kaffe.org>

	* src/notifier/notifier-impl.c
	(_strreplace): New helper function to perform string replacement.
	(notify_new): Beautify the popup window, and replace '<' and '>'
	with '〈' and '〉' to avoid invalid input since context_text will
	be passed to GtkLabel, which accepts Rich text representations.
	It's a workaround, and we should introduce a smarter way to fix.

2005-08-07  Jim Huang  <jserv@kaffe.org>

	* src/view/telnetcon.h:
	Wrap USE_NANCY macro with MOZ_PLUGIN for the sake of plugin.

	* src/view/telnetcon.cpp (CTelnetCon::CTelnetCon):